--- a/zzz/vmSetup/config/dotFiles/.tmux.conf
+++ b/zzz/vmSetup/config/dotFiles/.tmux.conf
@@ -1,3 +1,5 @@
+### TMUX CORE SETTINGS
+
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set-option -g prefix C-a
@@ -25,6 +27,8 @@ bind -n M-Right next-window
 bind -n M-n new-window
 bind -n M-w kill-window
 
+
+
 ### THEMES
 
 #set status-utf8 on
@@ -34,19 +38,73 @@ bind -n M-w kill-window
 #set -g status-bg black
 #set -g status-fg white
 
-set-window-option -g status-left " #S "
-set-window-option -g status-left-fg black
-set-window-option -g status-left-bg white
-set-window-option -g status-right " %H:%M %d-%b-%y "
+# set-window-option -g status-left " #S "
+# set-window-option -g status-left-fg black
+# set-window-option -g status-left-bg white
+# set-window-option -g status-right " %H:%M %d-%b-%y "
 
-set-window-option -g status-right-fg black
-set-window-option -g status-right-bg white
-set-window-option -g window-status-format " #I: #W "
+# set-window-option -g status-right-fg black
+# set-window-option -g status-right-bg white
+# set-window-option -g window-status-format " #I: #W "
 
-set-window-option -g window-status-current-format " #I: #W "
-set-window-option -g window-status-current-fg green
-set-window-option -g window-status-current-bg black
+# set-window-option -g window-status-current-format " #I: #W "
+# set-window-option -g window-status-current-fg green
+# set-window-option -g window-status-current-bg black
 
+
+
+#### COLOUR (Solarized 256)
+
+# default statusbar colors
+set-option -g status-bg colour235 #base02
+set-option -g status-fg colour136 #yellow
+set-option -g status-attr default
+
+# default window title colors
+set-window-option -g window-status-fg colour244 #base0
+set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr dim
+
+# active window title colors
+set-window-option -g window-status-current-fg colour166 #orange
+set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-attr bright
+
+# pane border
+set-option -g pane-border-fg colour235 #base02
+set-option -g pane-active-border-fg colour240 #base01
+
+# message text
+set-option -g message-bg colour235 #base02
+set-option -g message-fg colour166 #orange
+
+# pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
+
+# clock
+set-window-option -g clock-mode-colour colour64 #green
+
+# 12 hour clock
+#set-window-option -g clock-mode-style 12
+#setw -g clock-mode-style 12
+
+# right size status. include clocks
+set-window-option -g status-right " %I:%M | %d %b "
+
+# bell
+set-window-option -g window-status-bell-style fg=colour235,bg=colour160 #base02, red
+
+#### SET HERE
+set -g @colors-solarized '256'
+
+
+
+# LINKS
+#
+# Solarized theme
+# https://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors-256.conf
+#
 # http://mjswensen.com/blog/2014/08/09/friendlier-tmux-status-bar/
 # https://gist.github.com/spicycode/1229612
 # http://www.hamvocke.com/blog/a-quick-and-easy-guide-to-tmux/
