did some cleanup on the bash scripts

--- a/zzz/vmSetup/config/dotFiles/.env
+++ b/zzz/vmSetup/config/dotFiles/.env
@@ -6,8 +6,8 @@ echo ">>> .env >"
 VAGRANT_PATH=/vagrant/zzz/vmSetup
 
 # DEV VARIABLES
-GOLANG_BITS=64
-GOLANG_VER=1.7.5
+#GOLANG_BITS=64
+#GOLANG_VER=1.7.5
 # MAYBE THE NODE STUFF..
 
 # GOLANG STUFF
@@ -20,8 +20,14 @@ export GOBINPATH=/usr/local/go/bin
 # Go path is where you gocode lives.
 # Not really need to be set
 
+
+# NVM
+export NVM_DIR="$HOME/.nvm"
+[ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh" # This loads nvm
+
 # RVM
-export RVMPATH=$HOME/.rvm/bin
+#[[ -s "$HOME/.rvm/scripts/rvm" ]] && source "$HOME/.rvm/scripts/rvm" # Load RVM into a shell session *as a function*
+#export RVMPATH=$HOME/.rvm/bin
 
 # PATH.
 # check the init scripts sif you need to modify the paths.
