--- a/zzz/vmSetup/ansible/basic/basicLibsAndShell/roles/shell/vars/main.yml
+++ b/zzz/vmSetup/ansible/basic/basicLibsAndShell/roles/shell/vars/main.yml
@@ -2,10 +2,10 @@
 dir_dot_files_src: /vagrant/zzz/vmSetup/config/dotFiles
 dir_home: /home/vagrant
 files_dot_files:
-  - ".alias"
   - ".ansible.cfg"
   - ".bash_aliases"
   - ".bash_profile"
+  - ".bash_visual"
   - ".bashrc"
   - ".env"
   - ".profile"
