--- a/zzz/vmSetup/ansibleTesting/cassandra/roles/installDatastaxCass/vars/main.yml
+++ b/zzz/vmSetup/ansibleTesting/cassandra/roles/installDatastaxCass/vars/main.yml
@@ -1,6 +1,6 @@
 ---
-username: "hubert@sweetyhigh.com"
-password: "Rapture4koala"
+username: "hubertwwong@gmail.com"
+password: "1Password"
 datastax_url: "debian.datastax.com/enterprise"
 datastax_key_url: "https://debian.datastax.com/debian/repo_key"
 packages:
