remove the virtual box updating in the vagrantfile. move java to dev dir in ansible.

--- a/zzz/vmSetup/ansible/ver/allProgLangs.yml
+++ b/zzz/vmSetup/ansible/ver/allProgLangs.yml
@@ -6,3 +6,4 @@
 - import_playbook: ../dev/golang/site.yml
 - import_playbook: ../dev/nvm/site.yml
 - import_playbook: ../dev/python/site.yml
+- import_playbook: ../dev/java/site.yml
